# LNGinventoryopt

./: .gitignore  01.monta_dados_entrada.ipynb  02.1.simular_v1.ipynb  02.2.simular_v2.ipynb  02.simular.ipynb  03.view_results.ipynb  README.md  descricao_variaveis.xlsx  entradas.json  entradas.xlsx  modelo_otimizado.json  models_otimizador.py  models_otimizador_v2.py  parametros_modelo.pkl  pyproject.toml  simular.ipynb  view_results.ipynb
OLD/: models_otimizador_OLD.py
entradas/: anotacoes.md  entradas.json  entradas.xlsx  entradas1.json  options_summary copy.csv  options_summary.csv  options_v2.csv
entradas/raw/: USD_BRL Dados Históricos.csv  tb_cargas_gnl.csv  tb_configuracoes.csv  tb_contratos_gnl.csv
misc/: desc.xlsx
saidas/: resultados_otimizacao.xlsx  saidas.json  saidas.xlsx  saidas_v2.json
